--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-publish = "dist"
 command = "yarn build"
+publish = ".next"
 
 [context.production.environment]
   TOML_ENV_VAR = "From netlify.toml"
