Chore: yarn netlify 플러그인 설치
빌드에 필요한 netlify 플러그인 설치

--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.2.1",
     "@react-oauth/google": "^0.12.1",
     "@typescript-eslint/scope-manager": "^7.8.0",
     "axios": "^1.6.8",
