--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.51.4",
     "react-icon": "^1.0.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "styled-components": "^6.1.9",
     "zustand": "^4.5.2"
   },
