--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
     "eslint-plugin-prettier": "^5.1.3",
