Feat: likelist 완성, mealgrid 코드 리팩토링
mealgrid 컴포넌트 props추가, 재사용성을 위해 4개>1개로 수정, 콘솔 오류 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "public/main/images.d.ts"],
+  "include": ["src", "src/type/images.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
