--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@xeger/quill-image-actions": "^0.7.2",
     "@xeger/quill-image-formats": "^0.7.2",
     "axios": "^1.6.8",
+    "draft-js": "^0.11.7",
     "eslint-plugin-prettier": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
