--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@aws-sdk/credential-provider-node": "^3.577.0",
+    "@aws-sdk/lib-storage": "^3.578.0",
     "@hookform/error-message": "^2.0.1",
     "@tanstack/react-query": "^5.36.0",
+    "@types/node": "^20.12.12",
     "@xeger/quill-image-actions": "^0.7.2",
     "@xeger/quill-image-formats": "^0.7.2",
+    "aws-sdk": "^2.1625.0",
     "axios": "^1.6.8",
-    "draft-js": "^0.11.7",
     "eslint-plugin-prettier": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "react-error-overlay": "6.0.9"
   }
 }
