--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aws-sdk": "^2.1627.0",
     "axios": "^1.6.8",
     "eslint-plugin-prettier": "^5.1.3",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
